<resources>
    <string name="app_name">RPSYoutube</string>
    <string name="action_settings">Settings</string>
    <string name="rock">Rock</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-PAper-Scissors!</string>
    <string name="please_choose_your_weapon">Please choose your weapon:</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="player">Player:</string>
    <string name="players_s_weapon">Players\'s Weapon:</string>
    <string name="computer_s_weapon">Computer\'s Weapon:</string>
    <string name="outcome">Outcome</string>
    <string name="player_0_computer_0">Player: 0 Computer: 0</string>
</resources>
