<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock"
        app:layout_constraintBottom_toTopOf="@+id/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper"
        app:layout_constraintBottom_toTopOf="@+id/scissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rock" />

    <Button
        android:id="@+id/scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scissors"
        app:layout_constraintBottom_toTopOf="@+id/tv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paper" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_rock_paper_scissors"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_choose_your_weapon"
        app:layout_constraintBottom_toTopOf="@+id/rock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/playersWeapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players_s_weapon"
        app:layout_constraintBottom_toTopOf="@+id/computersWeapon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score" />

    <TextView
        android:id="@+id/computersWeapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_s_weapon"
        app:layout_constraintBottom_toTopOf="@+id/outcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playersWeapon" />

    <TextView
        android:id="@+id/outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computersWeapon" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_0_computer_0"
        app:layout_constraintBottom_toTopOf="@+id/playersWeapon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scissors" />
</androidx.constraintlayout.widget.ConstraintLayout>